# Monitor-Control-VCP

./: CMakeLists.txt  CMakeUserPresets.json  README.md
images/: CMakeLists.txt
resources/: monitorcontrol.rc
src/: main.cpp
src/app/: AsyncScrollDetect.h  CMakeLists.txt  CustomFrames.cpp  CustomFrames.h  CustomSlider.cpp  CustomSlider.h  Dialogs.cpp  Dialogs.h  MonitorHandler.cpp  MonitorHandler.h  MonitorSettingsWidget.cpp  MonitorSettingsWidget.h  MonitorTable.cpp  MonitorTable.h  RawData.cpp  RawData.h  SettingsWidget.cpp  SettingsWidget.h  SignalLinker.cpp  SignalLinker.h  TrayIconControlled.cpp  TrayIconControlled.h  error.cpp  errors.h  helpers.cpp  helpers.h  main.cpp  mainwindow.cpp  mainwindow.h  resource.h  trayicon.cpp  trayicon.h  utilities.cpp  utilities.h  winController.cpp  winController.h  winMouseLoop.cpp  winMouseLoop.h  workers.cpp  workers.h
src/translation/: IGNORE_CMakeLists.txt  MonitorControl_de.ts
